--- a/VulnerableWebApp/VulnerableWebApplication.csproj
+++ b/VulnerableWebApp/VulnerableWebApplication.csproj
@@ -11,4 +11,13 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="en">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="fr">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
